# http-server-rust

./: Cargo.toml  README.md  urls.txt
src/: main.rs
