[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bstr = "1.12.0"
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.1.2"
thiserror = "1.0.38"                             # error handling
